--- a/expense tracking system usng html css and js/index.html
+++ b/expense tracking system usng html css and js/index.html
@@ -1,7 +1,7 @@
 // index.html
 <!DOCTYPE html>
 <html>
-
+//expense tracker system
 <head>
     <title>Expense Tracker</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -55,3 +55,4 @@
 </body>
 
 </html>
+
