--- a/expense tracking system usng html css and js/index.html
+++ b/expense tracking system usng html css and js/index.html
@@ -6,7 +6,7 @@
     <title>Expense Tracker</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-
+//body of tehb program
 <body>
     <div class="container">
         <h1>Expense Tracker</h1>
@@ -55,4 +55,5 @@
 </body>
 
 </html>
+
 
